--- a/tpi-frontend/tpi-system/package.json
+++ b/tpi-frontend/tpi-system/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "tpi-backend",
+  "version": "1.0.0",
+  "description": "TPI 数据同步后端服务",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "express": "^4.18.2",
+    "pg": "^8.11.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
